# drogon_auth

./: .env.example  CHANGELOG.md  CMakeLists.txt  GEMINI.md  NOTICE  README.md  _.env.example  conanfile.py  generate_project.py  prompt.md
data/: _.env.example  config.example.json
docs/: api.md
docs/architecture/: architecture.md  component_diagram.md
docs/database/: database.md  erd_diagram.md
include/: admin_ctrl.hpp  auth_ctrl.hpp  auth_middleware.hpp  auth_srv.hpp  config_util.hpp  login_filter.hpp  rz_config.hpp  system_ctrl.hpp
include/utils/: config_utils.hpp  password_utils.hpp  seeder_utils.hpp  totp_utils.hpp
migrations/: 001_initial_schema.sql  001_pg_schema.sql  001_sqlite_schema.sql  002_pg_password_reset.sql  002_sqlite_password_reset.sql  hinweise_empfehlungen.md  readme.md
public/html/: index.html
public/html/css/: index.css
public/html/img/drogon/: logo_256x256.avif  logo_512x512.avif  logo_92x92.avif
src/: admin_ctrl.cpp  auth_ctrl.cpp  auth_middleware.cpp  auth_srv.cpp  config_util.cpp  login_filter.cpp  main.cpp  system_ctrl.cpp
src/utils/: config_utils.cpp  password_utils.cpp  seeder_utils.cpp  totp_utils.cpp
tests/: test_auth.cpp
